AM 23/07/05
- Cleaned up some imports, that were generating warnings in Eclipse. 
  Cleaned up documentation, changed access rights of all parameters 
  but one (Node.PAR_PROT) to private, and added @config tags.
  Started a first clean-up of documentation and code.
  Some reformatting, particularly in the examples.
  NOTE: This commit is HUGE, but it is just an aesthetic commit; no
  fundamental code has been changed.
  
MJ 21/07/05
- Added some implementations of NextCycleEvent

MJ 20/07/05
- Refactored cdsim.Simulator so that it now only loads and executes
  controls, and calling the protocols is done by a control too. By default
  the old config files work. However, this modification makes it possible
  to totaly freely order the controls and the execution of a cycle, and
  (with the help of NextCycle) it is possible to run only a subset of the
  protocols, some controls in between and then some other subset. These
  features however will be used only for hacking...
- Removed the "simulation.shuffle" parameter, shuffling can now be
  added by the control cdsim.Shuffle. This way the time within the cycle and
  the schedule of the shuffling is as flexible as for any other control.

MJ 17/07/05
- Cleaned up the time issue and introduced CommonState.getIntTime for
  protocols that need timestamps but want to avoid longs (for performance
  resons). CDState.getCycle and CDState.getCycleT are used only when
  absolutely necessary. A good practice is to use CommonState methods
  only, to allow compatibility with the evend driven engine.
  More to come...

MJ 16/07/05
- added support for wrapping cycle driven protocol implementations into
  an event driven simulation. All calls to nextCycle are managed by a separate
  event and the "step" parameter of the scheduler for the protocol serves
  as the cycle length. It can be different for all protocols, and the
  way the consequtive cycles are scheduled can be changed by extending
  NextCycleEvent.
  More to come...
